# pydantic-init

./: Makefile  README.md  pyproject.toml
examples/: hero.json  hero.py  hero.schema.json
pydantic_init/: __init__.py  from_init.py  instantiate.py
tests/: test_init.py
